# Servo

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Math.svo  README.md  Test.svo  TestClass.svo  go.mod
.github/workflows/: go.yml  go_ast_tests.yml  go_code_tests.yml  go_compiler_tests.yml  go_evaluator_tests.yml  go_lexer_tests.yml  go_object_tests.yml  go_parser_tests.yml  go_servovm_tests.yml  go_tests.yml  go_tests_coverage.yml
Go/examples/: 01.svo  03.svo  04.svo  05.svo  Test.svo
Go/servo/src/: main.go
research/: FileStructure.md
servo/: Main.ts  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  main.ts  memory.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
servo/frontend/: AST.ts  Lexer.ts  Parser.ts  ast.ts  lexer.ts  parser.ts
servo/runtime/: Environment.ts  Interpreter.ts  Values.ts  environment.ts  interpreter.ts  values.ts
servo/runtime/error/: Exception.ts
servo/runtime/eval/: Expressions.ts  (+3 more)
src/: main.go
src/ast/: ast.go  ast_test.go  modify_test.go
src/code/: code.go  code_test.go
src/compiler/: compiler.go  compiler_test.go  symbol_table_test.go
src/evaluator/: builtins.go  evaluator.go  evaluator_test.go  macro_expansion.go  macro_expansion_test.go  quote_unquote.go  quote_unquote_test.go
src/lexer/: lexer.go  lexer_test.go
src/object/: object.go  object_test.go
src/parser/: parser.go  parser_test.go
src/repl/: repl.go
src/servo/: Resolver.java  Servo.java
src/token/: token.go
src/vm/: frame.go  vm.go  vm_test.go
tests/: SomeObject.svo  math.svo  test.svo
(+30 files in other folders)
